--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>My GitHub Pages Site</title>
-  </head>
-  <body>
-    <h1>Hello world!</h1>
-    <p>Welcome to my GitHub Pages site!</p>
-  </body>
+<head>
+    <title>Welcome to drhoangzp.github.io</title>
+</head>
+<body>
+    <h1>Welcome to drhoangzp.github.io</h1>
+    <h2>Các repository khác mà bạn có thể ghé qua:</h2>
+    <ul>
+        <li><a href="https://github.com/drhoangzp/win">Các lệnh chạy trong Windows</a></li>
+    </ul>
+</body>
 </html>
