--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
     <ul>
         <li><a href="https://github.com/drhoangzp/win">Các lệnh chạy trong Windows</a></li>
     </ul>
+    <h3>Các web con khác mà bạn có thể ghé qua:</h3>
+    <ul>
+        <li><a href="https://drhoangzp.github.io/kho">Trang web quản lý kho</a></li>
+    </ul>
 </body>
 </html>
