--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </ul>
     <h3>Các web con khác mà bạn có thể ghé qua:</h3>
     <ul>
-        <li><a href="https://drhoangzp.github.io/kho">Trang web quản lý kho</a></li>
+        <li><a href="https://drhoangzp.github.io/game">Trang web game</a></li>
     </ul>
 </body>
 </html>
